_config.yml manual changes.

--- a/_config.yml
+++ b/_config.yml
@@ -18554,11 +18554,19 @@ issues:
   month: June
   bibmonth: jun
   articles:
-  - slug: RJ-2019-049
+  - slug: editorial
+    cat: Editorial
+    author: Michael J. Kane
+    title: Editorial
+    bibtitle: Editorial
+    bibauthor: Michael J. Kane
+    pages:
+    - 4
+    - 5
+  - heading: Contributed Research Articles
+  - slug: RJ-2020-003
     title: 'mistr: A Computational Framework for Mixture and Composite Distributions'
-    bibtitle: |-
-      mistr: A Computational Framework for Mixture and Composite
-                Distributions
+    bibtitle: 'mistr: A Computational Framework for Mixture and Composite Distributions'
     author:
     - Lukas Sablica
     - Kurt Hornik
@@ -18596,10 +18604,10 @@ issues:
     - Robust
     - TeachingStatistics
     suppl: 1.9 Kb
-    landing: '2019'
+    landing: '2020'
     pages:
-      - 114
-      - 130
+    - 114
+    - 130
   - slug: RJ-2020-001
     title: 'Mapping Smoothed Spatial Effect Estimates from Individual-Level Data:
       MapGAM '
@@ -18991,8 +18999,8 @@ issues:
     - TimeSeries
     landing: '2020'
     pages:
-      - 7
-      - 20
+    - 7
+    - 20
   - slug: RJ-2020-011
     title: Tools for Analyzing R Code the Tidy Way
     bibtitle: Tools for Analyzing R Code the Tidy Way
@@ -19774,3 +19782,47 @@ issues:
     pages:
     - 270
     - 290
+  - heading: Special Articles
+  - slug: RJ-2020-028
+    title: 'S, R, and Data Science'
+    bibtitle: 'S, R, and Data Science'
+    author:
+    - John M. Chambers
+    bibauthor: John M. Chambers
+    abstract: '  Data science is increasingly important and challenging. It requires computational tools and programming environments that handle big data and difficult computations, while supporting creative, high-quality analysis. The R language and related software play a major role in computing for data science. R is featured in most programs for training in the field. R packages provide tools for a wide range of purposes and users. The description of a new technique, particularly from research in statistics, is frequently accompanied by an R package, greatly increasing the usefulness of the description.
+The history of R makes clear its connection to data science. R was consciously designed to replicate in open-source software the contents of the S software. S in turn was written by data analysis researchers at Bell Labs as part of the computing environment for research in data analysis and collaborations to apply that research, rather than as a separate project to create a programming language. The features of S and the design decisions made for it need to be understood in this broader context of supporting effective data analysis (which would now be called data science). These characteristics were all transferred to R and remain central to its effectiveness. Thus, R can be viewed as based historically on a domain-specific language for the domain of data science.
+Note to R Journal readers:
+The following paper was published online in the History of Programming Languages (HOPL), Volume 4, in June 2020 (DOI 10.1145/3386334). The content seems likely to be of interest to many R Journal readers, and since HOPL is plausibly not typical reading for data scientists, the editors of the R Journal have kindly offered to republish the paper here. This is possible thanks also to the enlightened policy of the ACM, providing for open distribution through the chosen copyright declaration.'
+    landing: '2020'
+    pages:
+    - 462
+    - 476
+  - slug: RJ-2020-029
+    title: 'Provenance of R’s Gradient Optimizers'
+    bibtitle: 'Provenance of R’s Gradient Optimizers'
+    author:
+    - John C. Nash
+    bibauthor: John C. Nash
+    abstract: '  Gradient optimization methods (function minimizers) are well-represented in both the base and package universe of R (R Core Team, 2019). However, some of the methods and the codes developed from them were published before standards for hardware and software were established, in particular the IEEE arithmetic (IEEE, 1985). There have been cases of unexpected behaviour or outright errors, and these are the focus of the histoRicalg project. A summary history of some of the tools in R for gradient optimization methods is presented to give perspective on such methods and the occasions where they could be used effectively.'
+    landing: '2020'
+    pages:
+    - 477
+    - 483
+  - heading: News and Notes
+  - slug: cran
+    author: 
+    - Kurt Hornik
+    - Uwe Ligges
+    - Achim Zeileis
+    title: Changes on CRAN
+    bibtitle: Changes on CRAN
+    bibauthor: Kurt Hornik, Uwe Ligges and Achim Zeileis
+    pages: 
+    - 484
+    - 486
+  - slug: foundation
+    author: Torsten Hothorn
+    title: R Foundation News
+    bibtitle: R Foundation News
+    bibauthor: Torsten Hothorn
+    page: 487
