--- a/_config.yml
+++ b/_config.yml
@@ -19826,3 +19826,20 @@ The following paper was published online in the History of Programming Languages
     bibtitle: R Foundation News
     bibauthor: Torsten Hothorn
     page: 487
+  - slug: whyR
+    author:
+    - Michał Burdukiewicz
+    - Filip Pietluch
+    - Jarosław Chilimoniuk
+    - Katarzyna Sidorczuk
+    - Dominik Rafacz
+    - Leon Eyrich Jessen
+    - Stefan Rödiger
+    - Marcin Kosin ́ski
+    - PiotrWójcik
+    title: |-
+      Conference Report: Why R? 2019
+    bibauthor: Michał Burdukiewicz, Filip Pietluch, Jarosław Chilimoniuk, Katarzyna Sidorczuk, Dominik Rafacz, Leon Eyrich Jessen, Stefan Rödiger, Marcin Kosin ́ski, PiotrWójcik
+    pages:
+    - 488
+    - 497
