few more papers published

--- a/_config.yml
+++ b/_config.yml
@@ -280,6 +280,246 @@ issues:
     - Phylogenetics
     - TeachingStatistics
     landing: '2021'
+  - slug: RJ-2021-010
+    title: A Fast and Scalable Implementation Method for Competing Risks Data with
+      the R Package fastcmprsk
+    bibtitle: |-
+      A Fast and Scalable Implementation Method for Competing
+                Risks Data with the R Package fastcmprsk
+    author:
+    - Eric S. Kawaguchi
+    - Jenny I. Shen
+    - Gang Li
+    - Marc A. Suchard
+    bibauthor: |-
+      Eric S. Kawaguchi and Jenny I. Shen and Gang Li and Marc A.
+                Suchard
+    abstract: '  Abstract Advancements in medical informatics tools and high-throughput
+      biological experimentation            make large-scale biomedical data routinely
+      accessible to researchers. Competing risks data are typical            in biomedical
+      studies where individuals are at risk to more than one cause (type of event)
+      which can            preclude the others from happening. The Fine and Gray (1999)
+      proportional subdistribution hazards            model is a popular and well-appreciated
+      model for competing risks data and is currently implemented            in a
+      number of statistical software packages. However, current implementations are
+      not computation           ally scalable for large-scale competing risks data.
+      We have developed an R package, fastcmprsk, that            uses a novel forward-backward
+      scan algorithm to significantly reduce the computational complexity            for
+      parameter estimation by exploiting the structure of the subject-specific risk
+      sets. Numerical studies            compare the speed and scalability of our
+      implementation to current methods for unpenalized and            penalized Fine-Gray
+      regression and show impressive gains in computational efficiency.'
+    acknowledged: '2020-01-16'
+    online: '2021-01-14'
+    CRANpkgs:
+    - fastcmprsk
+    - cmprsk
+    - riskRegression
+    - timereg
+    - survival
+    - crrSC
+    - crrstep
+    - crrp
+    - glmnet
+    - ncvreg
+    - Cyclops
+    - doParallel
+    - crr
+    CTV_rev:
+    - Survival
+    - MachineLearning
+    - ClinicalTrials
+    - Econometrics
+    - SocialSciences
+    landing: '2021'
+  - slug: RJ-2021-011
+    title: 'ordinalClust: An R Package to Analyze Ordinal Data'
+    bibtitle: 'ordinalClust: An R Package to Analyze Ordinal Data'
+    author:
+    - Margot Selosse
+    - Julien Jacques
+    - Christophe Biernacki
+    bibauthor: Margot Selosse and Julien Jacques and Christophe Biernacki
+    abstract: '  Abstract Ordinal data are used in many domains, especially when measurements
+      are collected            from people through observations, tests, or questionnaires.
+      ordinalClust is an innovative R package            dedicated to ordinal data
+      that provides tools for modeling, clustering, co-clustering and classifying            such
+      data. Ordinal data are modeled using the BOS distribution, which is a model
+      with two meaningful            parameters referred to as "position" and "precision".
+      The former indicates the mode of the distribution            and the latter
+      describes how scattered the data are around the mode: the user is able to easily
+      interpret            the distribution of their data when given these two parameters.
+      The package is based on the co           clustering framework (when rows and
+      columns are simultaneously clustered). The co-clustering            approach
+      uses the Latent Block Model (LBM) and the SEM-Gibbs algorithm for parameter
+      inference.            On the other hand, the clustering and the classification
+      methods follow on from simplified versions            of the SEM-Gibbs algorithm.
+      For the classification process, two approaches are proposed. In the            first
+      one, the BOS parameters are estimated from the training dataset in the conventional
+      way. In the            second approach, parsimony is introduced by estimating
+      the parameters and column-clusters from the            training dataset. We
+      empirically show that this approach can yield better results. For the clustering            and
+      co-clustering processes, the ICL-BIC criterion is used for model selection purposes.
+      An overview            of these methods is given, and the way to use them with
+      the ordinalClust package is described using            real datasets. The latest
+      stable package version is available on the Comprehensive R Archive Network            (CRAN).'
+    acknowledged: []
+    online: '2021-01-14'
+    CRANpkgs:
+    - ordinalClust
+    - VGAM
+    - rms
+    - brms
+    - ordinal
+    - ordinalForest
+    - monmlp
+    - ocapis
+    - clustMD
+    - ordinalLBM
+    - CUB
+    - mclust
+    CTV_rev:
+    - Econometrics
+    - Distributions
+    - Environmetrics
+    - Multivariate
+    - Psychometrics
+    - SocialSciences
+    - Survival
+    - Bayesian
+    - Cluster
+    - ExtremeValue
+    - Phylogenetics
+    - ReproducibleResearch
+    landing: '2021'
+  - slug: RJ-2021-012
+    title: 'KSPM: A Package For Kernel Semi-Parametric Models'
+    bibtitle: 'KSPM: A Package For Kernel Semi-Parametric Models'
+    author:
+    - Catherine Schramm
+    - Sébastien Jacquemont
+    - Karim Oualkacha
+    - Aurélie Labbe
+    - Celia M.T.            Greenwood
+    bibauthor: |-
+      Catherine Schramm and Sébastien Jacquemont and Karim
+                Oualkacha and Aurélie Labbe and Celia M.T.
+                Greenwood
+    abstract: '  Abstract Kernel semi-parametric models and their equivalence with
+      linear mixed models provide            analysts with the flexibility of machine
+      learning methods and a foundation for inference and tests of            hypothesis.
+      These models are not impacted by the number of predictor variables, since the
+      kernel            trick transforms them to a kernel matrix whose size only depends
+      on the number of subjects. Hence,            methods based on this model are
+      appealing and numerous, however only a few R programs are            available
+      and none includes a complete set of features. Here, we present the KSPM package
+      to fit            the kernel semi-parametric model and its extensions in a unified
+      framework. KSPM allows multiple            kernels and unlimited interactions
+      in the same model. It also includes predictions, statistical tests,            variable
+      selection procedure and graphical tools for diagnostics and interpretation of
+      variable effects.            Currently KSPM is implemented for continuous dependent
+      variables but could be extended to binary            or survival outcomes.'
+    acknowledged: '2020-05-31'
+    online: '2021-01-14'
+    CRANpkgs:
+    - KSPM
+    - coxme
+    - SKAT
+    - SPA3G
+    - KRLS
+    - e1071
+    - np
+    - mgcv
+    - lme4
+    - nlme
+    - DEoptim
+    - adegenet
+    - CompQuadForm
+    CTV_rev:
+    - Econometrics
+    - Environmetrics
+    - SocialSciences
+    - Psychometrics
+    - Bayesian
+    - Distributions
+    - OfficialStatistics
+    - SpatioTemporal
+    - ChemPhys
+    - Cluster
+    - Finance
+    - Genetics
+    - MachineLearning
+    - Multivariate
+    - Optimization
+    - Spatial
+    - Survival
+    landing: '2021'
+  - slug: RJ-2021-013
+    title: 'AQuadtree: an R Package for Quadtree Anonymization of Point Data'
+    bibtitle: |-
+      AQuadtree: an R Package for Quadtree Anonymization of Point
+                Data
+    author:
+    - Raymond Lagonigro
+    - Ramon Oller
+    - Joan Carles Martori
+    bibauthor: Raymond Lagonigro and Ramon Oller and Joan Carles Martori
+    abstract: ' Abstract The demand for precise data for analytical purposes grows
+      rapidly among the research           community and decision makers as more geographic
+      information is being collected. Laws protecting           data privacy are being
+      enforced to prevent data disclosure. Statistical institutes and agencies need           methods
+      to preserve confidentiality while maintaining accuracy when disclosing geographic
+      data.           In this paper we present the AQuadtree package, a software intended
+      to produce and deal with           official spatial data making data privacy
+      and accuracy compatible. The lack of specific methods in           R to anonymize
+      spatial data motivated the development of this package, providing an automatic           aggregation
+      tool to anonymize point data. We propose a methodology based on hierarchical           geographic
+      data structures to create a varying size grid adapted to local area population
+      densities.           This article gives insights and hints for implementation
+      and usage. We hope this new tool may be           helpful for statistical offices
+      and users of official spatial data.'
+    acknowledged: '2020-05-01'
+    online: '2021-01-14'
+    CRANpkgs:
+    - anonymizer
+    - SciencePo
+    - sdcMicro
+    - AQuadtree
+    - sp
+    - dplyr
+    - rgeos
+    - rgdal
+    CTV_rev:
+    - Spatial
+    - Databases
+    - ModelDeployment
+    - SpatioTemporal
+    landing: '2021'
+  - slug: RJ-2021-014
+    title: 'miWQS: Multiple Imputation Using Weighted Quantile Sum Regression'
+    bibtitle: |-
+      miWQS: Multiple Imputation Using Weighted Quantile Sum
+                Regression
+    author:
+    - Paul M. Hargarten
+    - David C. Wheeler
+    bibauthor: Paul M. Hargarten and David C. Wheeler
+    abstract: '  Abstract The miWQS package in the Comprehensive R Archive Network
+      (CRAN) utilizes weighted            quantile sum regression (WQS) in the multiple
+      imputation (MI) framework. The data analyzed is a            set/mixture of
+      continuous and correlated components/chemicals that are reasonable to combine
+      in            an index and share a common outcome. These components are also
+      interval-censored between zero            and upper thresholds, or detection
+      limits, which may differ among the components. This type of data            is
+      found in areas such as chemical epidemiological studies, sociology, and genomics.
+      The miWQS            package can be run using complete or incomplete data, which
+      may be placed in the first quantile,            or imputed using bootstrap or
+      Bayesian approach. This article provides a stepwise and hands-on            approach
+      to handle uncertainty due to values below the detection limit in correlated
+      component            mixture problems.'
+    acknowledged: '2020-04-04'
+    online: '2021-01-14'
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
