done with papers published

--- a/_config.yml
+++ b/_config.yml
@@ -520,6 +520,365 @@ issues:
     acknowledged: '2020-04-04'
     online: '2021-01-14'
     landing: '2021'
+  - slug: RJ-2021-015
+    title: 'Kuhn-Tucker and Multiple Discrete-Continuous Extreme Value Model Estimation
+      and Simulation in R: The rmdcev Package'
+    bibtitle: |-
+      Kuhn-Tucker and Multiple Discrete-Continuous Extreme Value
+                Model Estimation and Simulation in R: The rmdcev
+                Package
+    author: Patrick Lloyd-Smith
+    bibauthor: Patrick Lloyd-Smith
+    abstract: '  Abstract This paper introduces the package rmdcev in R for estimation
+      and simulation of Kuhn           Tucker demand models with individual heterogeneity.
+      The models supported by rmdcev are the            multiple-discrete continuous
+      extreme value (MDCEV) model and Kuhn-Tucker specification common            in
+      the environmental economics literature on recreation demand. Latent class and
+      random parameters            specifications can be implemented and the models
+      are fit using maximum likelihood estimation            or Bayesian estimation.
+      The rmdcev package also implements demand forecasting and welfare            calculation
+      for policy simulation. The purpose of this paper is to describe the model estimation
+      and            simulation framework and to demonstrate the functionalities of
+      rmdcev using real datasets.'
+    acknowledged: '2020-04-01'
+    online: '2021-01-15'
+    CRANpkgs:
+    - rmdcev
+    - apollo
+    - mlogit
+    - gmnl
+    CTV_rev:
+    - Econometrics
+    - SocialSciences
+    landing: '2021'
+  - slug: RJ-2021-016
+    title: 'NTS: An R Package for Nonlinear Time Series Analysis'
+    bibtitle: 'NTS: An R Package for Nonlinear Time Series Analysis'
+    author:
+    - Xialu Liu
+    - Rong Chen
+    - Ruey Tsay
+    bibauthor: Xialu Liu and Rong Chen and Ruey Tsay
+    abstract: '  Abstract Linear time series models are commonly used in analyzing
+      dependent data and in forecasting.            On the other hand, real phenomena
+      often exhibit nonlinear behavior and the observed data show            nonlinear
+      dynamics. This paper introduces the R package NTS that offers various computational            tools
+      and nonlinear models for analyzing nonlinear dependent data. The package fills
+      the gaps of            several outstanding R packages for nonlinear time series
+      analysis. Specifically, the NTS package            covers the implementation
+      of threshold autoregressive (TAR) models, autoregressive conditional mean            models
+      with exogenous variables (ACMx), functional autoregressive models, and state-space
+      models.            Users can also evaluate and compare the performance of different
+      models and select the best one for            prediction. Furthermore, the package
+      implements flexible and comprehensive sequential Monte Carlo            methods
+      (also known as particle filters) for modeling non-Gaussian or nonlinear processes.
+      Several            examples are used to demonstrate the capabilities of the
+      NTS package.'
+    acknowledged: '2020-04-05'
+    online: '2021-01-15'
+    CRANpkgs:
+    - NTS
+    - nonlinearTseries
+    - NlinTS
+    - nlts
+    - sm
+    - tree
+    - randomForest
+    - TAR
+    - tsDyn
+    - tscount
+    - ftsa
+    - SMC
+    CTV_rev:
+    - TimeSeries
+    - MachineLearning
+    - MissingData
+    - Econometrics
+    - Environmetrics
+    - Finance
+    - FunctionalData
+    - SocialSciences
+    landing: '2021'
+  - slug: RJ-2021-017
+    title: 'Species Distribution Modeling using Spatial Point Processes: a Case Study
+      of Sloth Occurrence in Costa Rica'
+    bibtitle: |-
+      Species Distribution Modeling using Spatial Point Processes:
+                a Case Study of Sloth Occurrence in Costa Rica
+    author: Paula Moraga
+    bibauthor: Paula Moraga
+    abstract: '  Abstract                Species distribution models are widely used
+      in ecology for conservation management of species            and their environments.
+      This paper demonstrates how to fit a log-Gaussian Cox process model to            predict
+      the intensity of sloth occurrence in Costa Rica, and assess the effect of climatic
+      factors on spatial            patterns using the R-INLA package. Species occurrence
+      data are retrieved using spocc, and spatial            climatic variables are
+      obtained with raster. Spatial data and results are manipulated and visualized
+      by            means of several packages such as raster and tmap. This paper
+      provides an accessible illustration of            spatial point process modeling
+      that can be used to analyze data that arise in a wide range of fields            including
+      ecology, epidemiology and the environment.'
+    acknowledged: []
+    online: '2021-01-15'
+    CRANpkgs:
+    - spocc
+    - raster
+    - tmap
+    - ggplot2
+    - leaflet
+    - mapview
+    - sp
+    - rnaturalearth
+    - rgeos
+    BIOpkgs:
+    - graph
+    - Rgraphviz
+    CTV_rev:
+    - Spatial
+    - SpatioTemporal
+    - Graphics
+    - OfficialStatistics
+    - Phylogenetics
+    - TeachingStatistics
+    landing: '2021'
+  - slug: RJ-2021-018
+    title: 'A Graphical EDA Tool with ggplot2: brinton'
+    bibtitle: 'A Graphical EDA Tool with ggplot2: brinton'
+    author:
+    - Pere Millán-Martínez
+    - Ramon Oller-Piqué
+    bibauthor: Pere Millán-Martínez and Ramon Oller-Piqué
+    abstract: '  Abstract We present brinton package, which we developed for graphical
+      exploratory data analysis            in R. Based on ggplot2, gridExtra and rmarkdown,
+      brinton package introduces wideplot() graphics            for exploring the
+      structure of a dataset through a grid of variables and graphic types. It also
+      introduces            longplot() graphics, which present the entire catalog
+      of available graphics for representing a particular            variable using
+      a grid of graphic types and variations on these types. Finally, it introduces
+      the plotup()            function, which complements the previous two functions
+      in that it presents a particular graphic for a            specific variable
+      of a dataset. This set of functions is useful for understanding the structure
+      of a data            set, discovering unexpected properties in the data, evaluating
+      different graphic representations of            these properties, and selecting
+      a particular graphic for display on the screen.'
+    acknowledged: []
+    online: '2021-01-15'
+    CRANpkgs:
+    - brinton
+    - ggplot2
+    - gridExtra
+    - rmarkdown
+    - graphics
+    - grid
+    - lattice
+    - survminer
+    - tabplot
+    - visdat
+    - inspectdf
+    - xray
+    - DataExplorer
+    - SmartEDA
+    - dataMaid
+    - summarytools
+    - ExPanDaR
+    - dlookr
+    - explore
+    - shinydashboard
+    - flexdashboard
+    - cowplot
+    - patchwork
+    - KMsurv
+    - Stat2Data
+    - Ecdat
+    CTV_rev:
+    - Graphics
+    - Survival
+    - Econometrics
+    - MissingData
+    - Multivariate
+    - Phylogenetics
+    - ReproducibleResearch
+    - TeachingStatistics
+    - TimeSeries
+    landing: '2021'
+  - slug: RJ-2021-019
+    title: 'MoTBFs: An R Package for Learning Hybrid Bayesian Networks Using Mixtures
+      of Truncated Basis Functions'
+    bibtitle: |-
+      MoTBFs: An R Package for Learning Hybrid Bayesian Networks
+                Using Mixtures of Truncated Basis Functions
+    author:
+    - Inmaculada Pérez-Bernabé
+    - Ana D. Maldonado
+    - Antonio Salmerón
+    - Thomas D. Nielsen
+    bibauthor: |-
+      Inmaculada Pérez-Bernabé and Ana D. Maldonado and Antonio
+                Salmerón and Thomas D. Nielsen
+    abstract: '  Abstract This paper introduces MoTBFs, an R package for manipulating
+      mixtures of truncated            basis functions. This class of functions allows
+      the representation of joint probability distributions            involving discrete
+      and continuous variables simultaneously, and includes mixtures of truncated            exponentials
+      and mixtures of polynomials as special cases. The package implements functions
+      for            learning the parameters of univariate, multivariate, and conditional
+      distributions, and provides            support for parameter learning in Bayesian
+      networks with both discrete and continuous variables.            Probabilistic
+      inference using forward sampling is also implemented. Part of the functionality
+      of the            MoTBFs package relies on the bnlearn package, which includes
+      functions for learning the structure            of a Bayesian network from a
+      data set. Leveraging this functionality, the MoTBFs package supports            learning
+      of MoTBF-based Bayesian networks over hybrid domains. We give a brief introduction
+      to            the methodological context and algorithms implemented in the package.
+      An extensive illustrative            example is used to describe the package,
+      its functionality, and its usage.'
+    acknowledged: '2020-04-05'
+    online: '2021-01-15'
+    CRANpkgs:
+    - MoTBFs
+    - bnlearn
+    - deal
+    - pcalg
+    - HydeNet
+    - abn
+    CTV_rev:
+    - gR
+    - Bayesian
+    - HighPerformanceComputing
+    landing: '2021'
+  - slug: RJ-2021-021
+    title: 'OpenLand: Software for Quantitative Analysis and Visualization of Land
+      Use and Cover Change'
+    bibtitle: |-
+      OpenLand: Software for Quantitative Analysis and
+                Visualization of Land Use and Cover Change
+    author:
+    - Reginal Exavier
+    - Peter Zeilhofer
+    bibauthor: Reginal Exavier and Peter Zeilhofer
+    abstract: '  Abstract There is an increasing availability of spatially explicit,
+      freely available land use and cover            (LUC) time series worldwide.
+      Because of the enormous amount of data this represents, the continuous            updates
+      and improvements in spatial and temporal resolution and category differentiation,
+      as well            as increasingly dynamic and complex changes made, manual
+      data extraction and analysis is highly            time consuming, and making
+      software tools available to automatize LUC data assessment is becom           ing
+      imperative. This paper presents a software developed in R, which combines LUC
+      raster time            series data and their transitions, calculates state-of-the-art
+      LUC change indicators, and creates spatio           temporal visualizations,
+      all in a coherent workflow. The functionality of the application developed is            demonstrated
+      using an LUC dataset of the Pantanal floodplain contribution area in Central
+      Brazil.'
+    acknowledged: []
+    online: '2021-01-15'
+    CRANpkgs:
+    - intensity.analysis
+    - lulcc
+    - OpenLand
+    - raster
+    - dplyr
+    - tidyr
+    - ggplot2
+    - circlize
+    - gridExtra
+    - networkD3
+    CTV_rev:
+    - Databases
+    - Graphics
+    - Hydrology
+    - ModelDeployment
+    - Phylogenetics
+    - Spatial
+    - SpatioTemporal
+    - TeachingStatistics
+    landing: '2021'
+  - slug: RJ-2021-023
+    title: 'FarmTest: An R Package for Factor-Adjusted Robust Multiple Testing'
+    bibtitle: |-
+      FarmTest: An R Package for Factor-Adjusted Robust Multiple
+                Testing
+    author:
+    - Koushiki Bose
+    - Jianqing Fan
+    - Yuan Ke
+    - Xiaoou Pan
+    - Wen-Xin Zhou
+    bibauthor: |-
+      Koushiki Bose and Jianqing Fan and Yuan Ke and Xiaoou Pan
+                and Wen-Xin Zhou
+    abstract: '  Abstract We provide a publicly available library FarmTest in the
+      R programming system. This            library implements a factor-adjusted robust
+      multiple testing principle proposed by Fan et al. (2019) for            large-scale
+      simultaneous inference on mean effects. We use a multi-factor model to explicitly
+      capture            the dependence among a large pool of variables. Three types
+      of factors are considered: observable,            latent, and a mixture of observable
+      and latent factors. The non-factor case, which corresponds to            standard
+      multiple mean testing under weak dependence, is also included. The library implements
+      a            series of adaptive Huber methods integrated with fast data-driven
+      tuning schemes to estimate model            parameters and to construct test
+      statistics that are robust against heavy-tailed and asymmetric error            distributions.
+      Extensions to two-sample multiple mean testing problems are also discussed.
+      The            results of some simulation experiments and a real data analysis
+      are reported.'
+    acknowledged: '2020-06-03'
+    online: '2021-01-15'
+    CRANpkgs:
+    - FarmTest
+    - Rcpp
+    - multcomp
+    - mutoss
+    - rstiefel
+    BIOpkgs:
+    - qvalue
+    - multtest
+    CTV_rev:
+    - Bayesian
+    - ClinicalTrials
+    - HighPerformanceComputing
+    - NumericalMathematics
+    - SocialSciences
+    - Survival
+    landing: '2021'
+  - slug: RJ-2021-024
+    title: User-Specified General-to-Specific and Indicator Saturation Methods
+    bibtitle: |-
+      User-Specified General-to-Specific and Indicator Saturation
+                Methods
+    author: Genaro Sucarrat
+    bibauthor: Genaro Sucarrat
+    abstract: '  Abstract General-to-Specific (GETS) modelling provides a comprehensive,
+      systematic and cumulative            approach to modelling that is ideally suited
+      for conditional forecasting and counterfactual analysis,            whereas
+      Indicator Saturation (ISAT) is a powerful and flexible approach to the detection
+      and estimation            of structural breaks (e.g. changes in parameters),
+      and to the detection of outliers. To these ends, multi           path backwards
+      elimination, single and multiple hypothesis tests on the coefficients, diagnostics
+      tests            and goodness-of-fit measures are combined to produce a parsimonious
+      final model. In many situations            a specific model or estimator is
+      needed, a specific set of diagnostics tests may be required, or a specific            fit
+      criterion is preferred. In these situations, if the combination of estimator/model,
+      diagnostics tests            and fit criterion is not offered in a pre-programmed
+      way by publicly available software, then the            implementation of user-specified
+      GETS and ISAT methods puts a large programming-burden on the            user.
+      Generic functions and procedures that facilitate the implementation of user-specified
+      GETS            and ISAT methods for specific problems can therefore be of great
+      benefit. The R package gets is the            first software – both inside and
+      outside the R universe – to provide a complete set of facilities for            user-specified
+      GETS and ISAT methods: User-specified model/estimator, user-specified diagnostics            and
+      user-specified goodness-of-fit criteria. The aim of this article is to illustrate
+      how user-specified            GETS and ISAT methods can be implemented with
+      the R package gets.'
+    acknowledged: '2020-06-03'
+    online: '2021-01-15'
+    CRANpkgs:
+    - gets
+    - AutoSEARCH
+    - Matrix
+    CTV_rev:
+    - Econometrics
+    - Finance
+    - Multivariate
+    - NumericalMathematics
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
