--- a/_config.yml
+++ b/_config.yml
@@ -879,6 +879,41 @@ issues:
     - Multivariate
     - NumericalMathematics
     landing: '2021'
+  - slug: RJ-2021-025
+    title: 'TULIP: A Toolbox for Linear Discriminant Analysis with Penalties'
+    bibtitle: |-
+      TULIP: A Toolbox for Linear Discriminant Analysis with
+                Penalties
+    author:
+    - Yuqing Pan
+    - Qing Mai
+    - Xin Zhang
+    bibauthor: Yuqing Pan and Qing Mai and Xin Zhang
+    abstract: '  Abstract Linear discriminant analysis (LDA) is a powerful tool in
+      building classifiers with easy            computation and interpretation. Recent
+      advancements in science technology have led to the popularity            of
+      datasets with high dimensions, high orders and complicated structure. Such datasetes
+      motivate            the generalization of LDA in various research directions.
+      The R package TULIP integrates several            popular high-dimensional LDA-based
+      methods and provides a comprehensive and user-friendly            toolbox for
+      linear, semi-parametric and tensor-variate classification. Functions are included
+      for model            fitting, cross validation and prediction. In addition,
+      motivated by datasets with diverse sources of            predictors, we further
+      include functions for covariate adjustment. Our package is carefully tailored
+      for            low storage and high computation efficiency. Moreover, our package
+      is the first R package for many of            these methods, providing great
+      convenience to researchers in this area.'
+    acknowledged: '2020-05-06'
+    online: '2021-01-20'
+    CRANpkgs:
+    - TULIP
+    - msda
+    - sparseLDA
+    - glmnet
+    CTV_rev:
+    - MachineLearning
+    - Survival
+    landing: '2021'
 - issue: 2009-1
   year: 2009
   volume: 1
