RJ-2021-002 supplementary added

--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,7 @@ issues:
     - SocialSciences
     - Optimization
     - TimeSeries
+    suppl: 2.3 Kb
     landing: '2021'
   - slug: RJ-2021-003
     title: 'A unified algorithm for the non-convex penalized estimation: The ncpen
