RJ-2021-003 supplementary added

--- a/_config.yml
+++ b/_config.yml
@@ -95,11 +95,11 @@ issues:
     suppl: 2.3 Kb
     landing: '2021'
   - slug: RJ-2021-003
-    title: 'A unified algorithm for the non-convex penalized estimation: The ncpen
-      package'
+    title: 'A Unified Algorithm for the Non-Convex Penalized Estimation: The ncpen
+      Package'
     bibtitle: |-
-      A unified algorithm for the non-convex penalized estimation:
-                The ncpen package
+      A Unified Algorithm for the Non-Convex Penalized Estimation:
+                The ncpen Package
     author:
     - Dongshin Kim
     - Sangin Lee*
@@ -114,10 +114,28 @@ issues:
       concave procedure and modified local quadratic approximation            algorithm,
       which can be applied to a broader range of non-convex penalties, including the
       SCAD and            MCP as special examples. Many user-friendly functionalities
-      such as generalized information criteria,            cross-validation and `2
-      -stabilization are provided also.'
+      such as generalized information criteria,            cross-validation and ridge
+      regularization are provided also.'
     acknowledged: []
     online: '2021-01-14'
+    CRANpkgs:
+    - lars
+    - glmpath
+    - glmnet
+    - plus
+    - sparsenet
+    - cvplogit
+    - ncvreg
+    - ncpen
+    - spls
+    - Rcpp
+    CTV_rev:
+    - MachineLearning
+    - Survival
+    - ChemPhys
+    - HighPerformanceComputing
+    - NumericalMathematics
+    suppl: 4 Kb
     landing: '2021'
   - slug: RJ-2021-004
     title: 'TULIP: A Toolbox for Linear Discriminant Analysis with Penalties'
