--- a/_config.yml
+++ b/_config.yml
@@ -188,6 +188,7 @@ issues:
     acknowledged: []
     online: '2021-01-14'
     CRANpkgs: fitzRoy
+    suppl: 1.3 Kb
     landing: '2021'
   - slug: RJ-2021-007
     title: 'RNGforGPD: An R Package for Generation of Univariate and Multivariate
