RJ-2021-007 supplementary added

--- a/_config.yml
+++ b/_config.yml
@@ -228,6 +228,7 @@ issues:
     - Phylogenetics
     - Robust
     - TeachingStatistics
+    suppl: 7 Kb
     landing: '2021'
   - slug: RJ-2021-008
     title: Testing the equality of normal distributed and independent groups' means
