RJ-2021-008 supplementary added

--- a/_config.yml
+++ b/_config.yml
@@ -259,6 +259,7 @@ issues:
     acknowledged: []
     online: '2021-01-14'
     CRANpkgs: doex
+    suppl: 1.6 Kb
     landing: '2021'
   - slug: RJ-2021-009
     title: Six Years of Shiny in Research - Collaborative Development of Web Tools
