--- a/_config.yml
+++ b/_config.yml
@@ -138,31 +138,48 @@ issues:
     suppl: 4 Kb
     landing: '2021'
   - slug: RJ-2021-004
-    title: 'TULIP: A Toolbox for Linear Discriminant Analysis with Penalties'
+    title: Six Years of Shiny in Research - Collaborative Development of Web Tools
+      in R
     bibtitle: |-
-      TULIP: A Toolbox for Linear Discriminant Analysis with
-                Penalties
+      Six Years of Shiny in Research - Collaborative Development
+                of Web Tools in R
     author:
-    - Yuqing Pan
-    - Qing Mai
-    - Xin Zhang
-    bibauthor: Yuqing Pan and Qing Mai and Xin Zhang
-    abstract: '  Abstract Linear discriminant analysis (LDA) is a powerful tool in
-      building classifiers with easy            computation and interpretation. Recent
-      advancements in science technology have led to the popularity            of
-      datasets with high dimensions, high orders and complicated structure. Such datasetes
-      motivate the            generalization of LDA in various research directions.
-      The R package TULIP integrates several popular            high-dimensional LDA-based
-      methods and provides a comprehensive and user-friendly toolbox for            linear,
-      semi-parametric and tensor-variate classification. Functions are included for
-      model fitting, cross            validation and prediction. In addition, motivated
-      by datasets with diverse sources of predictors, we            further include
-      functions for covariate adjustment. Our package is carefully tailored for low
-      storage            and high computation efficiency. Moreover, our package is
-      the first R package for many of these            methods, providing great convenience
-      to researchers in this area.'
-    acknowledged: '2020-05-06'
+    - Peter Kasprzak
+    - Lachlan Mitchell
+    - Olena Kravchuk
+    - Andy Timmins
+    bibauthor: |-
+      Peter Kasprzak and Lachlan Mitchell and Olena Kravchuk and
+                Andy Timmins
+    abstract: Abstract The use of Shiny in research publications is investigated over
+      the six and          a half years since the appearance of this popular web application
+      framework for R,          which has been utilised in many varied research areas.
+      While it is demonstrated          that the complexity of Shiny applications
+      is limited by the background architecture,          and real security concerns
+      exist for novice app developers, the collaborative benefits          are worth
+      attention from the wider research community. Shiny simplifies the          use
+      of complex methodologies for people of different specialities, at the level
+      of          proficiency appropriate for the end user. This enables a diverse
+      community of users          to interact efficiently, and utilise cutting edge
+      methodologies. The literature reviewed          demonstrates that complex methodologies
+      can be put into practice without insisting          on investment in professional
+      training, for a comprehensive understanding from all          participants.
+      It appears that Shiny opens up concurrent benefits in communication          between
+      those who analyse data and other disciplines, that would enrich much of          the
+      peer-reviewed research.
+    acknowledged: '2019-10-20'
     online: '2021-01-14'
+    CRANpkgs:
+    - Shiny
+    - ggplot2
+    - Reactlog
+    - ShinyTester
+    - rHyperSpec
+    - ShinyStan
+    CTV_rev:
+    - Graphics
+    - Phylogenetics
+    - TeachingStatistics
     landing: '2021'
   - slug: RJ-2021-005
     title: fitzRoy - An R Package to Encourage Reproducible Sports Analysis
