--- a/_config.yml
+++ b/_config.yml
@@ -363,13 +363,13 @@ issues:
     - ncvreg
     - Cyclops
     - doParallel
-    - crr
     CTV_rev:
     - Survival
     - MachineLearning
     - ClinicalTrials
     - Econometrics
     - SocialSciences
+    suppl: 1.4 Kb
     landing: '2021'
   - slug: RJ-2021-011
     title: 'ordinalClust: An R Package to Analyze Ordinal Data'
