--- a/_config.yml
+++ b/_config.yml
@@ -406,9 +406,9 @@ issues:
     online: '2021-01-14'
     CRANpkgs:
     - ordinalClust
+    - MASS
     - VGAM
     - rms
-    - brms
     - ordinal
     - ordinalForest
     - monmlp
@@ -425,11 +425,13 @@ issues:
     - Psychometrics
     - SocialSciences
     - Survival
-    - Bayesian
     - Cluster
     - ExtremeValue
-    - Phylogenetics
+    - NumericalMathematics
     - ReproducibleResearch
+    - Robust
+    - TeachingStatistics
+    suppl: 1.5 Kb
     landing: '2021'
   - slug: RJ-2021-012
     title: 'KSPM: A Package For Kernel Semi-Parametric Models'
