--- a/_config.yml
+++ b/_config.yml
@@ -535,6 +535,7 @@ issues:
     - Databases
     - ModelDeployment
     - SpatioTemporal
+    suppl: 2.4 Kb
     landing: '2021'
   - slug: RJ-2021-014
     title: 'miWQS: Multiple Imputation Using Weighted Quantile Sum Regression'
