--- a/_config.yml
+++ b/_config.yml
@@ -561,6 +561,43 @@ issues:
       component            mixture problems.'
     acknowledged: '2020-04-04'
     online: '2021-01-14'
+    CRANpkgs:
+    - miWQS
+    - wqs
+    - gWQS
+    - mice
+    - norm
+    - mi
+    - coda
+    - Rsolnp
+    - glm2
+    - rlist
+    - Hmisc
+    - tidyr
+    - ggplot2
+    - survival
+    - invgamma
+    - truncnorm
+    - purrr
+    - GGally
+    - rticles
+    CTV_rev:
+    - MissingData
+    - SocialSciences
+    - OfficialStatistics
+    - Bayesian
+    - ClinicalTrials
+    - Econometrics
+    - Multivariate
+    - Distributions
+    - gR
+    - Graphics
+    - Optimization
+    - Phylogenetics
+    - ReproducibleResearch
+    - Survival
+    - TeachingStatistics
+    suppl: 3.7 Kb
     landing: '2021'
   - slug: RJ-2021-015
     title: 'Kuhn-Tucker and Multiple Discrete-Continuous Extreme Value Model Estimation
